<resources>
    <string name="app_name">EzCharge</string>
    <string name="nav_home">Home</string>
    <string name="nav_pay">Pay</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_menu">More</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_clear">Clear</string>
    <string name="todo">TODO</string>
    <string name="not_check">Please Agree with the Rules!! Thanks</string>
    <string name="not_code">This is not an EzCharge Station Code</string>
    <string name="scan_again">Please Tap the scanner to rescan. Thanks</string>
    <string name="empty_cart">Come On. Buy Some Snack First!! Thanks</string>
    <string name="zero_minute">0 Minute</string>
    <string name="zero_km">0 KM</string>
    <string name="zero_price">RM 0.00</string>
    <string name="no_history">No History Record Found!!</string>
    <string name="charge_hist">Purchase History</string>
    <string name="toCharge">TO CHARGE</string>
    <string name="toBuySnack">TO SNACK</string>
    <string name="toContinueCharge"><u>Tap to Continue</u></string>
    <string name="guide_icon">EZCHARGE</string>
    <string name="guide_header">Station Safety Guidelines</string>
    <string name="guide_notes">Please follow the safety guidelines below when you are charging your vehicle</string>
    <string name="guide_for_car">For Car Drivers</string>
    <string name="guide_for_car_note1">Part at EzCharge enabled charging station.</string>
    <string name="guide_for_car_note2">Launch EzCharge app.</string>
    <string name="guide_for_car_note3">Scan QR code accordingly, select charging connector, and select charge amount.</string>
    <string name="guide_for_car_note4">Once charging connector is ready, put away your phone and step out to recharge.</string>
    <string name="guide_for_car_info">Do not use your phone while charging.</string>
    <string name="guide_check_box_tick">I hereby agree to and accept the EzCharge station safety guidelines govering my use of the EzCharge app at EzCharge station.</string>
    <string name="guide_button_i_accept">CONTINUE</string>
    <string name="scan_default">Scan something....</string>
    <string name="ask_camera_permission">You need the camera permission to be able to use this app!</string>
    <string name="scan_proceed">PROCEED</string>
    <string name="charging_location">Station Kepong</string>
    <string name="charging_pump">PUMP</string>
    <string name="charging_duration_title">How Long Do You Want To Charge</string>
    <string name="decrement_time">-</string>
    <string name="increment_time">+</string>
    <string name="charging_duration_minute30">30</string>
    <string name="charging_duration_minute">minutes</string>
    <string name="charging_connector">Connector</string>
    <string name="charging_start">Start Time</string>
    <string name="charging_end">End Time</string>
    <string name="charging_duration">Duration</string>
    <string name="charging_distance">Distance</string>
    <string name="charging_pricing">Price</string>
    <string name="charging_null">- - -</string>
    <string name="charging_to_pay">PAY</string>
    <string name="charging_pin">Please enter your 6 digits PIN.</string>
    <string name="pin_not_match">PIN not match please try again</string>
    <string name="insufficient_money">Insufficient Money, please top-up at least RM 200.00 first</string>
    <string name="charging_pin_enter">Enter PIN To Continue</string>
    <string name="charging_settle">Charging Completed</string>
    <string name="charging_status">Charging Status</string>
    <string name="charging_status_EzCharge">EzCharge Station</string>
    <string name="charging_status_finish">Finish At</string>
    <string name="charging_status_stop">STOP</string>
    <string name="charging_status_done">DONE</string>
    <string name="charging_complete_title">Charging Completed</string>
    <string name="charging_complete_product"><u>PRODUCTS / TYPES</u></string>
    <string name="charging_complete_price"><u>PRICE</u></string>
    <string name="charging_complete_totalPrice"><u>TOTAL</u></string>
    <string name="charging_complete_pumpNo">PUMP NUMBER</string>
    <string name="charging_complete_pumpResult">Pump 1</string>
    <string name="charging_complete_walletBalance">WALLET BALANCE</string>
    <string name="charging_complete_locationAddr">Lot 44665 Mukim Batu, Kepong, Bandar Menjalara, 52200 Kuala Lumpur</string>
    <string name="charging_complete_ezchargeNo">EZCHARGE CARD</string>
    <string name="charging_complete_receiptDate">DATE</string>
    <string name="charging_complete_totalPriceBtm">TOTAL</string>
    <string name="charging_complete_thanks">Thank You</string>
    <string name="charging_complete_thanks1">Have a Safe Journey</string>
    <string name="charging_ezsnack">EzSnack</string>
    <string name="charging_ezsnack_location">Get Ez Snack items delivered to you</string>
    <string name="charging_viewCart">VIEW CART</string>
    <string name="charging_ezsnack_cartTitle">Review your cart</string>
    <string name="charging_ezsnack_cartNoPlastic">No plastic bag requested +RM 0.20</string>
    <string name="charging_ezsnack_cartTotalItems">items</string>
    <string name="charging_ezsnack_cartCheckout">CHECKOUT</string>
    <string name="charging_plate_enter">Vehicle Plate Number</string>
    <string name="charging_plate_tips">Please provide your vehicle plate number (without space) so we can deliver your purchases to you.</string>
    <string name="charging_plate_hints">Enter Your Plate Number</string>
    <string name="defaultNews">hello</string>
    <string name="inboxMain">Inbox</string>
    <string name="defaultDateTime">30 Mar 2022, 5:32 PM</string>
    <string name="title_a">Charge Price Update &#9981;</string>
    <string name="title_b">Top up wallet with Cash Soon &#128178;</string>
    <string name="title_c">RM5,000 CASH could be yours &#128526;</string>
    <string name="title_d">Get RM13 bonus credits? &#128142;</string>
    <string name="title_e">Charge Price Update &#9981;</string>
    <string name="title_f">Securely, MORE Benefits &#129296;</string>
    <string name="title_g">Top up with GrabPay Soon &#129297;</string>
    <string name="title_h">New drops on EzCharge &#127873;</string>
    <string name="title_i">Charge Price Update &#9981;</string>
    <string name="title_j">Check Out our New Page &#127881;</string>
    <string name="note_a">13rd April - 29th April 2022</string>
    <string name="note_b">Learn more &#128073;</string>
    <string name="note_c">Hi there</string>
    <string name="note_d">Learn more &#128073;</string>
    <string name="note_e">6th April - 12th April 2022</string>
    <string name="note_f">Learn more &#128073;</string>
    <string name="note_g">Learn more &#128073;</string>
    <string name="note_h">Learn more &#128073;</string>
    <string name="note_i">30th March - 5th April 2022</string>
    <string name="note_j">Learn more &#128073;</string>
    <string name="inTitle_a">Charge Price Update 13rd April - 29th April 2022 &#9981;</string>
    <string name="inTitle_b">Top up wallet with Cash Soon &#128178;</string>
    <string name="inTitle_c">RM5,000 CASH could be yours &#128526;</string>
    <string name="inTitle_d">Bonus RM13 Credit coud be yours &#128142;</string>
    <string name="inTitle_e">Charge Price Update 6th April - 12th April 2022 &#9981;</string>
    <string name="inTitle_f">Enjoy these benefits only with verified account &#129296;</string>
    <string name="inTitle_g">Top up with GrabPay Soon &#129297;</string>
    <string name="inTitle_h">Get more points &#127873;</string>
    <string name="inTitle_i">Charge Price Update 30th March - 5th April 2022 &#9981;</string>
    <string name="inTitle_j">Visit our page &#127881;</string>
    <string name="news_a">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_b">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_c">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_d">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_e">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="news_f">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>