<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".Charging.TermNConActivity">

        <ImageView
            android:id="@+id/imageViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_electric_bolt_24" />

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAppName" />

        <TextView
            android:id="@+id/textViewGuideHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

        <TextView
            android:id="@+id/textViewGuideNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_notes"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGuideHeader" />

        <ImageView
            android:id="@+id/imageViewForCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGuideNotes"
            app:srcCompat="@drawable/ic_baseline_electric_car_24" />

        <TextView
            android:id="@+id/textViewForCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewForCar"
            app:layout_constraintStart_toEndOf="@+id/imageViewForCar"
            app:layout_constraintTop_toTopOf="@+id/imageViewForCar"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/textViewNum1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            android:freezesText="true"
            android:text="@string/num_one"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewForCar" />

        <TextView
            android:id="@+id/textViewGuideNote1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car_note1"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNum1"
            app:layout_constraintStart_toEndOf="@+id/textViewNum1"
            app:layout_constraintTop_toTopOf="@+id/textViewNum1" />

        <TextView
            android:id="@+id/textViewNum2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            android:freezesText="true"
            android:text="@string/num_two"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNum1" />

        <TextView
            android:id="@+id/textViewGuideNote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car_note2"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNum2"
            app:layout_constraintStart_toEndOf="@+id/textViewNum2"
            app:layout_constraintTop_toTopOf="@+id/textViewNum2" />

        <TextView
            android:id="@+id/textViewNum3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            android:freezesText="true"
            android:text="@string/num_three"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNum2" />

        <TextView
            android:id="@+id/textViewGuideNote3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car_note3"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNum3"
            app:layout_constraintStart_toEndOf="@+id/textViewNum3"
            app:layout_constraintTop_toTopOf="@+id/textViewNum3" />

        <TextView
            android:id="@+id/textViewNum4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            android:freezesText="true"
            android:text="@string/num_four"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNum3" />

        <TextView
            android:id="@+id/textViewGuideNote4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car_note4"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNum4"
            app:layout_constraintStart_toEndOf="@+id/textViewNum4"
            app:layout_constraintTop_toTopOf="@+id/textViewNum4" />

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNum4"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_for_car_info"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewInfo"
            app:layout_constraintStart_toEndOf="@+id/imageViewInfo"
            app:layout_constraintTop_toTopOf="@+id/imageViewInfo" />

        <CheckBox
            android:id="@+id/checkBoxGuidelines"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

        <TextView
            android:id="@+id/textViewCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_check_box_tick"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxGuidelines"
            app:layout_constraintStart_toEndOf="@+id/checkBoxGuidelines"
            app:layout_constraintTop_toTopOf="@+id/checkBoxGuidelines" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guide_button_i_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

